gradebookng/tool/src/webapp/styles/gradebook-gbgrade-table.css
 /* Fonts */
 @font-face {
    font-family:"gradebook-icons";
    src:url(../fonts/gradebook-icons.eot);
    src:url(../fonts/gradebook-icons.eot?#iefix) format("embedded-opentype"),url(../fonts/gradebook-icons.woff) format("woff"),url(../fonts/gradebook-icons.ttf) format("truetype"),url(../fonts/gradebook-icons.svg#gradebook-icons) format("svg");
    font-weight:400;
    font-style:normal
}
#gradeTableWrapper {
  position: relative;
  overflow: visible;
}

#gradeTableWrapper {
  font-size: 0.9em;
}
#gradeTableWrapper td {
  text-align: center;
  vertical-align: middle;
}
#gradeTableWrapper tbody th {
  text-align: left;
  vertical-align: middle;
}
#gradeTableWrapper .handsontableInputHolder {
  text-align: center;
}
#gradeTableWrapper .handsontableInputHolder .out-of {
  position: absolute;
  right: 2px;
  background-color: #FAFAFA;
  font-size: 0.8em;
  top: 2px;
  border-left: 1px solid #EEE;
  height: 28px;
  line-height: 28px;
  padding: 0 14px;
}
#gradeTableWrapper .handsontableInput {
  line-height: 30px;
  text-align: center;
}

#gradeTableWrapper .handsontable tr > *:nth-child(1){
  background-color: #F6f6f6;
  text-align: left;
}
#gradeTableWrapper .handsontable tr > *:nth-child(2){
  border-right: 1px solid #BBB;
  background-color: #F6f6f6;
}
#gradeTableWrapper .handsontable thead th {
  border-bottom: 1px solid #BBB;
}

#gradeTableWrapper .handsontable th,
#gradeTableWrapper .handsontable td {
  border-color: #EAEAEA;
  padding: 0;
}
#gradeTableWrapper .handsontable th > .relative,
#gradeTableWrapper .handsontable td > .relative {
  padding: 2px 4px 0;
}
#gradeTableWrapper .handsontable th > .relative > * {
  white-space: normal;
}
#gradeTableWrapper .handsontable th {
  background-color: #F6f6f6;
  height: 102px;
}

#gradeTableWrapper thead th {
  text-align: left;
}
#gradeTableWrapper thead th .relative {
  height: 100%;
}
#gradeTableWrapper tbody td .relative {
  height: 100%;
  min-height: 30px;
  display: flex;
  align-items: center;
  justify-content: center;
}
#gradeTableWrapper tbody td .gb-student-cell {
  white-space: normal;
  word-break: break-word;
  vertical-align: middle;
}
#gradeTableWrapper tbody td .gb-student-cell .gb-value {
  line-height: 1.2em;
  padding-left: 3px;
}
#gradeTableWrapper tbody td .gb-student-cell .gb-view-grade-summary {
  display: block;
  font-weight: normal;
}

#gradeTableWrapper .currentCol,
#gradeTableWrapper .currentRow,
#gradeTableWrapper .currentCol .relative,
#gradeTableWrapper .currentRow .relative {
  background-color: #FAFAFA;
}
#gradeTableWrapper th.currentCol,
#gradeTableWrapper th.currentRow,
#gradeTableWrapper .handsontable tr > .currentRow:nth-child(1),
#gradeTableWrapper .handsontable tr > .currentRow:nth-child(2) {
  background-color: #EEE;
}
#gradeTableWrapper .handsontable td {
  white-space: nowrap;
}
#gradeTableWrapper .gb-title {
  font-weight: bold;
  white-space: normal;
  text-align: left;
  line-height: 1.2em;
  display: inline-block;
  cursor: pointer;
  width: calc(100% - 16px);
}
#gradeTableWrapper .gb-title:hover:after {
  font-family: 'gradebook-icons';
  content: '\f0dc';
  position: absolute;
  right: 5px;
  top: 5px;
}
#gradeTableWrapper .gb-title.gb-sorted-asc:after {
  font-family: 'gradebook-icons';
  content: '\f0de';
  position: absolute;
  right: 5px;
  top: 5px;
}
#gradeTableWrapper .gb-title.gb-sorted-desc:after {
  font-family: 'gradebook-icons';
  content: '\f0dd';
  position: absolute;
  right: 5px;
  top: 5px;
}
#gradeTableWrapper .gb-title .gb-category {
  font-style: italic;
}
#gradeTableWrapper .gb-title .gb-category .gb-category-weight {
  font-style: normal;
}
#gradeTableWrapper .gb-grade-section,
#gradeTableWrapper .gb-due-date,
#gradeTableWrapper .gb-category {
  text-align: left;
  font-size: 0.9em;
  line-height: 1.3em;
}
#gradeTableWrapper .gb-grade-item-flags {
  position: absolute;
  bottom: 0;
  left: 5px;
}
#gradeTableWrapper th .btn-group,
#gradeTableWrapper td .btn-group {
  position: absolute;
  bottom: 5px;
  right: 5px;
}
#gradeTableWrapper .btn-group > a {
  line-height: 10px;
  padding: 0 10px;
  opacity: 0.2;
  border-color: #EEE;
}
#gradeTableWrapper th:hover .btn-group > a,
#gradeTableWrapper td:hover .btn-group > a,
#gradeTableWrapper .highlight .btn-group > a {
  opacity: 1;
}

#gradeTableWrapper .highlight {
  color: inherit;
  font-weight: inherit;
}

#gradebookSpreadsheet.gb-grouped-by-category #gradeTableWrapper th.gb-categorized {
  border-top: 10px solid #F0F0F0;
}
#gradeTableWrapper .swatch {
  width: 1em;
  height: 1em;
  display: inline-block;
  margin-right: 4px;
  box-shadow: 1px 1px 2px #CCC;
}
#gradeTableWrapper .gb-category-weight {
  color: #999;
  font-weight: normal;
}
#gradeTableWrapper .gb-uncategorized {
  text-align: left;
  color: #999;
}
#gradeTableWrapper tbody td .gb-value {
  line-height: 30px;
}
#gradeTableWrapper tbody td .btn-group {
  position: absolute;
  right: 0;
  bottom: 2px;
}
#gradeTableWrapper .gb-comment-notification {
  position: absolute;
  top: 50%;
  right: 8px;
  font-size: 16px;
  min-width: 16px;
  height: 20px;
  margin-top: -14px;
  color: #AAA;
}
#gradeTableWrapper .gb-comment-notification:before,
.gb-flag-comment:before {
  font-family: "gradebook-icons";
  content: '\f075';
}

#gradeTableWrapper .gb-notification {
  position: absolute;
  top: 50%;
  left: 10px;
  font-size: 16px;
  min-width: 16px;
  height: 20px;
  margin-top: -10px;
}
[class*="gb-flag"] {
  color: #999;
  font-family: 'gradebook-icons';
  display: inline-block;
  min-width: 16px;
  text-align: center;
  font-style: normal;
}
.gb-flag-not-counted:before {
  content: '\e600';
}
.gb-flag-not-released:before {
  content: '\e601';
}
.gb-flag-not-released:before {
  content: '\e601';
}
.gb-flag-counted,
.gb-flag-released {
  display: none;
}
#gradeTableWrapper .gb-extra-credit,
#gradeTableWrapper .currentRow .gb-extra-credit,
#gradeTableWrapper .currentCol .gb-extra-credit {
  background-color: #FCF8E3;
}
/* ... */

